--- a/01-demo/css/style.css
+++ b/01-demo/css/style.css
@@ -56,6 +56,18 @@ LAYOUT
 }
 
 /*
+LOADING
+================================================ */
+#loading {
+    background-color: var(--light-grey);
+    position: fixed;
+    inset: 0;
+    z-index: 9999;
+    display: grid;
+    place-items: center;
+}
+
+/*
 HERO
 ================================================ */
 .hero {
