✨ ローディング画面

--- a/01-demo/css/style.css
+++ b/01-demo/css/style.css
@@ -73,6 +73,10 @@ LOADING
     z-index: 9998;
     translate: 0 100vh;
 }
+#loading p {
+    font-size: 2rem;
+    font-family: var(--oswald-font);
+}
 
 /*
 HERO
